# mi-proyecto-cpp

./: CMakeLists.txt  README.md
include/: other_classes.h
include/classes/: Database.hpp  bill.hpp  billList.hpp  client.hpp  clientQueue.hpp  globals.hpp  menu.hpp  product.hpp  productList.hpp  shoppingCart.hpp
include/controllers/: admin.controllers.hpp  simulate.controllers.hpp
include/routes/: admin.routes.hpp  simulate.routes.hpp
src/: globals.cpp  main.cpp  other_classes.cpp
src/classes/: bill.cpp  billList.cpp  client.cpp  clientQueue.cpp  database.cpp  menu.cpp  product.cpp  productList.cpp  shoppingCart.cpp
src/controllers/: admin.controllers.cpp  simulate.controllers.cpp
src/routes/: admin.routes.cpp  simulate.routes.cpp
